--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -11,7 +11,34 @@
 	<header>
 		<div th:replace="fragments/secureHeader :: secureHeader"></div>
 	</header>
-	
+	<div class="about-details-cont">
+		<div class="about-side-div">
+			<h1>Bank details</h1>
+			<ul>
+				<li>Society</li>
+				<li>"Football Club"</li>
+				<li>Brivibas Street 27-21</li>
+				<li>Riga LV-1267</li>
+				<li>AS "Northwest Bank"</li>
+				<li>LV87HABA 897237683729</li>
+			</ul>
+		</div>
+		<div class="about-side2-div">
+			<h1>Address</h1>
+				<ul>
+					<li>Brivibas Gatve 3333</li>
+					<li>Riga LV-4567</li>
+				</ul>
+				</div>
+			<div class="about-center-div ">
+				<h1>Contacts</h1>
+				<ul>
+					<li>+ 371 26329275</li>
+					<li>+ 371 28763869</li>
+					<li>info@footballClub.com</li>
+				</ul>
+			</div>
+	</div>
 	<footer>
 		<div th:replace="fragments/footer :: footer"></div>
 	</footer>
