--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,10 +16,12 @@
 		      	<h2>Login</h2>
 		      	<span th:if="${param.error}" class="delete" >Invalid Username or password</span>
 		        <div>
-		          <input type="text" placeholder="Username" name="username" autofocus>
+		          <input type="text" placeholder="Username" name="username" required="required" autofocus pattern="[a-zA-Z0-9]{4,25}" 
+							   title="Username should be 4-25 character long and contain only big, small letters and numbers">
 		        </div>
 		        <div>
-		          <input type="password" name="password" placeholder="Password">
+		          <input type="password" name="password" placeholder="Password" required="required" pattern="[a-zA-Z0-9]{4,25}" 
+							   title="Password should be 4-25 character long and contain only big, small letters and numbers">
 		        </div>
 		        <button class="login-button" type="submit">Login</button>
 		      </div>
