--- a/src/main/resources/templates/player.html
+++ b/src/main/resources/templates/player.html
@@ -109,7 +109,7 @@
 					</div>
 					<div class="form-div">
 						<label>Email</label>
-						<input type="text" name="email">
+						<input type="email" name="email">
 					</div>
 					<div class="form-div">
 					<label>Position</label>
@@ -195,7 +195,7 @@
 					</div>
 					<div class="form-div">
 						<label>Email</label>
-						<input type="text" id="emailEdit" name="email">
+						<input type="email" id="emailEdit" name="email">
 					</div>
 					<div class="form-div">
 					<label>Position</label>
