--- a/src/main/resources/templates/trainingDetails.html
+++ b/src/main/resources/templates/trainingDetails.html
@@ -41,9 +41,10 @@
 					<tr>
 						<td>File:</td>
 						<td>
-							<a th:href="@{'/uploads/trainings/'+${training.team.teamName}+'/'+ ${training.id} +'.pdf'}" >
+							<a th:if="${training.fileExsists() == true}" th:href="@{'/uploads/trainings/'+${training.team.teamName}+'/'+ ${training.id} +'.pdf'}" >
 								<img  th:src="@{'/img/default/default-file.png'}" width="40" height="40">
 							</a>
+							<h4 th:unless="${training.fileExsists() == true}">No file yet</h4>
 						</td>
 					</tr>
 				</tbody>
